# SentinelOps

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SETUP.md  config.py  constants.py  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
agents/: alert_agent.py  drafting_agent.py  graph.py  llm_client.py  sentiment_agent.py
api/: main.py  schemas.py
api/routers/: alerts.py  drafts.py  posts.py
db/: engine.py  init.sql  models.py
db/seed_data/: seed.sql
ingestion/: backfill.py  news_collector.py  reddit_collector.py  scheduler.py  steam_collector.py
mcp_server/: server.py
observability/: prometheus.yml
observability/grafana/dashboards/: sentinelops.json
observability/grafana/provisioning/dashboards/: dashboard.yml
observability/grafana/provisioning/datasources/: datasource.yml
scripts/: test_slack_alert.py
slack_app/: app.py
slack_app/handlers/: alert_handler.py  approval_handler.py
tests/: conftest.py  test_agents.py  test_api.py  test_llm_client.py  test_mcp.py  test_slack.py  test_steam_collector.py
